unpackaged/main/default/objects/litify_docs__File_Info_Junction__c/litify_docs__File_Info_Junction__c.object-meta.xml
<CustomObject>
    <description>Custom object used to relate files to each other in a one to one relationship.</description>
    <label>File Info Junction</label>
    <nameField>
        <displayFormat>FIJ-{0000}</displayFormat>
        <label>File Info Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Info Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>