unpackaged/main/default/objects/litify_docs__File_Info_Junction__c/fields/litify_docs__Combined_File_Ids__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Combined_File_Ids__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Holds the values of File_Info_One and File_Info_Two concatenated in alphabetical order.</description>
    <externalId>true</externalId>
    <label>Combined File Ids</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>