unpackaged/main/default/objects/litify_docs__File_Info_Junction__c/fields/litify_docs__File_Info_Two__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__File_Info_Two__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the file info object, that will relate this file to the file specified in the File_Info_One field.</description>
    <label>File Info Two</label>
    <referenceTo>litify_docs__File_Info__c</referenceTo>
    <relationshipLabel>File Info Junctions (File Info Two)</relationshipLabel>
    <relationshipName>File_Info_Junctions_Two</relationshipName>
    <type>Lookup</type>
</CustomField>