unpackaged/main/default/objects/litify_docs__File_Info_Junction__c/fields/litify_docs__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Relationship_Type__c</fullName>
    <description>Specifies the type of relationship of the files referenced by this junction. Some examples include: Docrio Email, or API.</description>
    <label>Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>